fix gc log